# CARLOS-core

./: .gitignore  CMakeLists.txt  CONTEXT.md  README.md  pyproject.toml  requirements.txt  test_bridge.py
carlos/: __init__.py  __main__.py  agent.py  benchmark.py  benchmarks.py  cli.py  config.py  contracts.py  delayed_payoff.py  device.py  grid.py  inference.py  lsmc.py  model.py  payoffs.py  pricing.py  rl_loop.py  sampling.py  simulator.py  stage1.py  targets.py  timing.py  ui.py
docs/adr/: 0001-b1-benchmark-scoring-protocol.md  0002-paper-benchmark-suite.md  0003-algorithm3-fidelity.md
src/: bindings.cpp  simulation.hpp
tests/: test_benchmark.py  test_benchmarks.py  test_delayed_payoff.py  test_grid.py  test_lsmc.py  test_profile.py  test_sampling.py  test_targets.py
