[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "carlos"
version = "0.1.0"
description = "CARLOS: Continuous-time Adaptive Reinforcement Learning for Optimal Stopping"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "pybind11>=2.11",
]

[tool.setuptools.packages.find]
include = ["carlos*"]
